...
                                <rect key="frame" x="16" y="0.0" width="343" height="667"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="DeepLinkData"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Branch Link" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="SOP-3u-nhT" userLabel="branchLinkTextFiel
                                                    <rect key="frame" x="47.5" y="7" width="280" height="30"/>
                                                    <constraints>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="Create Branch Link">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="Set User ID">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="SimulateLogout">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="Share Link">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="View FirstReferringParams">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="View LatestReferringParams">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="Open Branch Link">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Branch-TestBed" id="eWU-bT-5CF" userLabel="Branch-TestBed"/>
                    <connections>
                        <outlet property="activityIndicator" destination="i4k-28-3dr" id="FZ3-dg-KF4"/>
...
