...
    NSString *versionString = [NSString stringWithFormat:@"Branch SDK v%@\nBundle Version %@\niOS %@",
                               BNC_SDK_VERSION,
                               [NSBundle mainBundle].infoDictionary[@"CFBundleShortVersionString"],
                               [UIDevice currentDevice].systemVersion];
    
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Versions" message:versionString preferredStyle:UIAlertControllerStyleAlert];
    UIAlertAction *okayAction = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:nil];
    [alert addAction:okayAction];
    [self presentViewController:alert animated:YES completion:nil];
}

- (IBAction)createBranchLinkButtonTouchUpInside:(id)sender {
    [activityIndicator startAnimating];
...
    [branch logoutWithCallback:^(BOOL changed, NSError *error) {
        if (error || !changed) {
            NSLog(@"Branch TestBed: Logout failed: %@", error);
            [self showAlert:@"Error simulating logout" withDescription:error.localizedDescription];
        } else {
            NSLog(@"Branch TestBed: Logout");
            [self showAlert:@"Logout succeeded" withDescription:@""];
        }
    }];
    
}

- (IBAction)sendContentEvent:(id)sender {
...
