...
                return true;
        }
    return false;
}

- (IBAction)sendOpenEvent:(id)sender {
    [(AppDelegate  *)[[UIApplication sharedApplication] delegate] setLogFile:@"Open"];
    [[NSNotificationCenter defaultCenter] postNotificationName:UIApplicationWillResignActiveNotification object:[UIApplication sharedApplication]];
    [[NSNotificationCenter defaultCenter] postNotificationName:UIApplicationDidBecomeActiveNotification object:[UIApplication sharedApplication]];
  }

- (IBAction)showLogs:(id)sender {
    UINavigationController *navigationController =
...
