...
                stringByAppendingPathComponent:BRANCH_QUEUE_FILE];
    return path;
}

+ (NSURL* _Nonnull) URLForQueueFile {
    NSURL *URL = BNCURLForBranchDirectory();
    URL = [URL URLByAppendingPathComponent:BRANCH_QUEUE_FILE isDirectory:NO];
    return URL;
}

+ (void) moveOldQueueFile {
    NSURL *oldURL = [NSURL fileURLWithPath:self.queueFile_deprecated];
    NSURL *newURL = [self URLForQueueFile];
...
